[tool.poetry]
name = "baklava"
version = "1.2.0"
description = "baklava: fork of pakala, an evm exploit tool"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
py-evm = "0.3.0a19"
coloredlogs = "10.0"
claripy = "8.20.1.7"
0x-web3 = "5.11.1"
eth-utils = "1.9.4"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
hacking = "^4.0.0"
pylint = "^2.7.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
